# SciWeb

./: .breakpoints  .cursorrules  .gcloudignore  .gitignore  .replit  ComingSoon.html  GA.css  GA.js  GradeAnalysis.html  Homescript.js  LoginPage.css  Loginscript.js  app.yaml  classroom.py  cmap_gen_rules.txt  console_logs.json  data.json  database.py  database_layout.txt  dockerfile  features.txt  firebase-messaging-sw.js  goals.py  grades.py  index.html  info.txt  jupapi.js  jupiter.py  llmtodo.txt  login.html  main.py  models.py  openai_utils.py  output_processor.py  package-lock 2.json  package-lock.json  package.json  prompts.py  pyproject.toml  pytest.ini  (+10 more)
.vercel/: project.json
CldRn_TimeDelayNotiFunc/: main.py  requirements.txt
cmaps/: CalcBCPolarParametric.txt  ceramics_concept_map.txt  concept_map_visualizer.py
routes/: ai_routes.py  analyze_routes.py  data_routes.py  page_init.py
static/: Assignments.css  Assignments.js  Battle.css  Battle.js  Battles.css  Battles.js  Classes.css  Classes.js  CourseSelection.css  CourseSelection.js  DailyCheckin.css  DailyCheckin.js  EG.css  EG.js  GA.css  GA.js  Goals.css  Goals.js  Home.js  HomePage.css  Homescript.js  IP.js  Leagues.css  Leagues.js  Levels2.css  Levels2.js  LoginPage.css  Loginscript.js  NHSplan  Pitch.css  Pitch.js  Profile.css  Profile.js  QuestionSystem.js  assignment.css  assignment.js  battleGraphics.js  chatBox.css  chatBox.js  class.css  (+73 more)
templates/: Assignments.html  Battle.html  Battles.html  Classes.html  ComingSoon.html  CourseSelection.html  DailyCheckin.html  Derive.html  DeriveGuide.html  (+52 more)
(+22 files in other folders)
